# torch_trainer

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: launch_script.sh
torch_trainer/: model.py
